# diplom-ini-parser

./: CMakeLists.txt  IniParser.cpp  IniParser.h  example.ini  ini_parser.cpp  ini_parser.h  main.cpp
